--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <title>Где **** мои деньги?</title>
 </head>
 <body>
-
+  <div class="header">
+    <div class="logo"><img src="" style="width:60px;height:60px;"></div>
+    <div class="title">Где Мои Деньги?</div>
+  </div>
 </body>
 </html>
