--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <div class="header">
-    <div class="logo"><img src="" style="width:60px;height:60px;"></div>
+    <div class="logo"><img src="https://yt3.ggpht.com/a-/AOh14GirCY0pD2Zd7lPm24Kyww5dVvYAz51c-XgG4Ibm=s88-c-k-c0xffffffff-no-rj-mo" style="width:60px;height:60px;"></div>
     <div class="title">Где Мои Деньги?</div>
   </div>
 </body>
