--- a/index.html
+++ b/index.html
@@ -2,6 +2,20 @@
 <head>
 <title>Где **** мои деньги?</title>
 </head>
+<style>
+body{
+  margin:0px;
+}
+.header{
+  background-color: #fff;
+    border-bottom: 1px solid #d1d5da;
+    box-shadow: 0px 2px 5px 0px;
+  width:100%;
+  display:flex;
+  align-items:center;
+  justify-content: center;
+}
+</style>
 <body>
   <div class="header">
     <div class="logo"><img src="https://yt3.ggpht.com/a-/AOh14GirCY0pD2Zd7lPm24Kyww5dVvYAz51c-XgG4Ibm=s88-c-k-c0xffffffff-no-rj-mo" style="width:60px;height:60px;"></div>
