--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@ body{
   align-items:center;
   justify-content: center;
 }
+.logo{
+  padding:5px;
+}
+.title{
+  font-size:20px;
+  margin-left:60px;
+}
 </style>
 <body>
   <div class="header">
