--- a/index.html
+++ b/index.html
@@ -28,5 +28,12 @@ body{
     <div class="logo"><img src="https://yt3.ggpht.com/a-/AOh14GirCY0pD2Zd7lPm24Kyww5dVvYAz51c-XgG4Ibm=s88-c-k-c0xffffffff-no-rj-mo" style="width:60px;height:60px;"></div>
     <div class="title">Где Мои Деньги?</div>
   </div>
+  <div class="container">
+    <div class="msg">
+      <div class="btn-box">
+        <a href="#">Download Files from the 1st Video</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
