--- a/index.html
+++ b/index.html
@@ -22,6 +22,33 @@ body{
   font-size:20px;
   margin-left:60px;
 }
+.container{
+  margin-top:70px;
+  text-align:center;
+}
+.msg{
+  height:120px;
+  display:flex;
+  flex-direction:column;
+  box-shadow: 0px 2px 5px 0px;
+  padding:20px;
+  margin-left:20px;
+  margin-right:20px;
+}
+.btn-box{
+  margin-top:40px;
+}
+.btn-box a{
+  font-size:20px;
+  text-decoration: none;
+  color:black;
+  padding:20PX;
+  border:1px solid black;
+}
+.btn-box a:hover{
+  background:black;
+  color:white;
+}
 </style>
 <body>
   <div class="header">
