--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ body{
 .msg{
   height:120px;
   display:flex;
+  background:url('https://whereismymoney.kamakepar.ru/1st.PNG');
   flex-direction:column;
   box-shadow: 0px 1px 5px 0px;
   padding:20px;
@@ -39,6 +40,7 @@ body{
   margin-top:40px;
 }
 .btn-box a{
+  background:white;
   font-size:20px;
   text-decoration: none;
   color:black;
@@ -58,7 +60,7 @@ body{
   <div class="container">
     <div class="msg">
       <div class="btn-box">
-        <a href="#">Download Files from the 1st Video</a>
+        <a href="1-resource.zip">Download Files from the 1st Video</a>
       </div>
     </div>
   </div>
