--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
 <title>Где **** мои деньги?</title>
+<meta charset="UTF-8">
+<meta description="Где **** мои деньги?">
+<meta name="viewport" content="width=device-width">
 </head>
 <style>
 body{
@@ -60,7 +63,7 @@ body{
   <div class="container">
     <div class="msg">
       <div class="btn-box">
-        <a href="1-resource.zip">Download Files from the 1st Video</a>
+        <a href="1-resource.zip">Скачать Файлы из Видео</a>
       </div>
     </div>
   </div>
